# ICISMED-Apriori

./: README.md  main.py  pyproject.toml
dev/: __init__.py
dev/apriori/: __init__.py  apriori.py  encoder.py
dev/postprocessing/: __init__.py  clear_rules.py  postprocess.py
dev/preprocessing/: feature_transformation.py  preprocess.py  utils.py
