[project]
name = "ICISMED-Apriori"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dev"}]